--- a/package.json
+++ b/package.json
@@ -35,23 +35,23 @@
     "dist"
   ],
   "dependencies": {
-    "async-validator": "^1.8.1",
+    "async-validator": "^1.9.0",
     "classnames": "^2.2.5",
-    "marked": "^0.3.9",
     "moment": "^2.19.2",
-    "rc-calendar": "^9.3.0",
+    "rc-calendar": "^9.7.10",
     "rc-checkbox": "^2.1.1",
     "rc-collapse": "^1.7.7",
     "rc-select": "^7.2.0",
     "rc-tabs": "^9.2.0",
-    "rc-time-picker": "^3.1.0",
-    "rc-upload": "^2.4.1"
+    "rc-time-picker": "^3.4.0",
+    "rc-upload": "^2.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.2",
-    "babel-plugin-import": "^1.6.2",
+    "babel-plugin-import": "^1.9.1",
     "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -60,11 +60,13 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "eslint": "^5.7.0",
+    "eslint-plugin-react": "^7.11.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.1.1",
@@ -74,16 +76,17 @@
     "karma-webpack": "^2.0.6",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "marked": "^0.3.19",
     "mocha": "^4.0.1",
     "prop-types": "^15.6.0",
     "raw-loader": "^0.5.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "react-router-dom": "^4.2.2",
     "rimraf": "^2.6.2",
     "sinon": "^4.1.3",
     "style-loader": "^0.19.0",
     "webpack": "^3.7.1",
-    "webpack-dev-server": "^2.9.1"
+    "webpack-dev-server": "^2.11.3"
   }
 }
