--- a/package.json
+++ b/package.json
@@ -88,5 +88,9 @@
     "style-loader": "^0.19.0",
     "webpack": "^3.7.1",
     "webpack-dev-server": "^2.11.3"
-  }
+  },
+  "eslintIgnore": [
+    "dist/**",
+    "lib/**"
+  ]
 }
