--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "biz-auto-form",
-  "version": "1.2.6",
+  "name": "@bizfe/biz-auto-form",
+  "version": "1.3.0",
   "description": "Auto-generated form react components used in ad material system",
   "main": "lib/index.js",
   "scripts": {
