--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
   "author": "KCFE",
   "license": "MIT",
   "bugs": {
-    "url": "http://gitlab.biztech.sogou-inc.com/biz-fe/biz-auto-form/issues"
+    "url": "http://bizgit.sogou/biztech/bizfe/base/biz-auto-form/issues"
   },
-  "homepage": "http://gitlab.biztech.sogou-inc.com/biz-fe/biz-auto-form",
+  "homepage": "http://bizgit.sogou/biztech/bizfe/base/biz-auto-form",
   "files": [
     "assets",
     "lib",
